# calendar-tui

./: Cargo.toml  credentials.json  design.md
src/: app.rs  auth.rs  calendar.rs  config.rs  main.rs  matrix.rs  meta.rs  priority.rs  tasks.rs  touch.rs  ui.rs
