[package]
name = "calendar-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = { version = "4", features = ["reqwest"] }
open = "5"
dirs = "5"
anyhow = "1"
url = "2"
urlencoding = "2"
unicode-width = "0.1"
